--- a/frontend/src/components/Chatbot.css
+++ b/frontend/src/components/Chatbot.css
@@ -44,7 +44,6 @@
 .view-messages {
   flex-grow: 1;
   height: 500px;
-  /* overflow-y: auto; */
   overflow: hidden;
   padding: 10px;
   background-color: #222;
@@ -54,22 +53,7 @@
   justify-content: flex-start;
 }
 
-.message {
-  padding: 8px 10px;
-  margin: 5px 0;
-  border-radius: 5px;
-  max-width: 90%;
-}
 
-.user-message {
-  background-color: #444;
-  align-self: flex-end;
-}
-
-.bot-message {
-  background-color: #333;
-  align-self: flex-start;
-}
 
 .input_and_btn {
   display: flex;
@@ -111,3 +95,37 @@ button:hover {
 button:active {
   background-color: #990000;
 }
+
+.message {
+  padding: 8px 10px;
+  margin: 5px 0;
+  border-radius: 5px;
+  max-width: 90%;
+  display: flex;
+  flex-direction: column;
+  align-self: flex-start; /* Default to align left */
+}
+
+.message.user {
+  background-color: #f1f1f1;
+  color: black;
+  align-self: flex-end; 
+  border-radius: 10px 10px 0 10px; 
+}
+
+.message.mr-robot {
+  background-color: #ff4444; 
+  color: white;
+  border-left: 5px solid red;
+  align-self: flex-start; 
+  border-radius: 10px 10px 10px 0;
+}
+
+.message.elliot {
+  background-color: #2c3e50; 
+  color: white;
+  border-left: 5px solid blue;
+  align-self: flex-start;
+  border-radius: 10px 10px 10px 0; 
+}
+
